Got the first query to work

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -22,6 +22,8 @@
 
         {{ queryData }}
 
+        {{ test }}
+
 
         <form action="/tempvsdepth/" method="post">
             {% csrf_token %}
