--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -22,6 +22,8 @@
 
         {{ queryData }}
 
+        {{ test }}
+
         <form action="/tempvstime/" method="post">
             <br>
             {# Django requires this token statement #}
