successfully download queryResults in csv with dumb styling

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -42,6 +42,7 @@
             </script>
             <div>
                 <input type="submit" value="Submit">
+                <button type="button">Download</button>
             </div>
         </form>
     </body>
