--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -6,12 +6,11 @@
 
         <title>Carleton Geothermal Data</title>
 
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-        <!-- XDSoft DateTimePicker -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
+        <!--daterangepicker package files-->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
     </head>
 
@@ -32,12 +31,14 @@
             {% csrf_token %}
             {{ form }}
             {# This script enables the fancy datetime picker #}
-            <script>
-                $(function () {
-                    $("#id_timestamp").datetimepicker({
-                    minDate:'2017/05/01',
-                    maxDate: '0'
-                });
+
+            <script type="text/javascript">
+                $(function() {
+                    $('#id_timestamp').daterangepicker({
+                        singleDatePicker: true,
+                        minDate: "{{ dataStartDate }}",
+                        maxDate: "{{ dataEndDate }}",
+                    });
                 });
             </script>
             <div>
