add headers to each page

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -29,6 +29,10 @@
         {% include 'dashboard/navbar.html' %}
         <br></br>
 
+        {% block header %}
+            <h1>Dashboard</h1>
+        {% endblock %}
+
         {% block content %}
 
         {% endblock %}
