--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -17,6 +17,10 @@
 
 {% endblock %}
 
+{% block header %}
+    <h1>Temperature vs. Depth</h1>
+{% endblock %}
+
 {% block content %}
     <button type="button" onclick="window.location.href='/'">Home</button>
 
