--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -16,6 +16,10 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 {% endblock %}
 
+{% block header %}
+    <h1>Temperature vs. Time</h1>
+{% endblock %}
+
 {% block content %}
     <button type="button" onclick="window.location.href='/'">Home</button>
 
