--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -23,28 +23,39 @@
     <h1>Temperature vs. Time</h1>
 {% endblock %}
 
+
+
+
 {% block content %}
     <button type="button" onclick="window.location.href='/'">Home</button>
 
-    {% for row in queryData %}
-        <div>{{ row }}</div>
+    {% if queryData %}
+    <details>
+        <summary>See Data</summary>
+            <div>
+                {% for row in queryData %}
+                    <div>{{ row }}</div>
+                {% endfor %}
+            </div>
+    </details>
+    {% endif %}
 
-    {% endfor %}
 
     {% if queryData %}
 
-    {% load static %}
     <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'graph.js' %}" type="module"></script>
     <script>
         var series1 = {{ graphData|safe}};
     </script>
 
-
-    <div id="graph" style="width:600px;height:300px"></div>
+    <div id="graph" style="width:100%;height:500px"></div>
     {% endif %}
 
-    {{ test }}
+
+
+
+
 
     <form action="/tempvstime/" method="post">
         <br>
