--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -3,10 +3,9 @@
 <title>About</title>
 
 {% block content %}
-    <div>About this Project</div>
         <h1>About Us</h1>
-            <p>We are the 2022-23 Geothermal Comps Team, advised by Prof. Amy Csizmar Dalal. The goal of this project was to provide an interface that displays the geothermal data for the broader Carleton community. To learn more about the background of the project, visit <a href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php">this page</a> on the computer science department website. </p>
-        <h2>About CARL</h2>
+            <p>We are the 2022-23 Geothermal Comps Team, advised by Prof. Amy Csizmar Dalal. Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community. To learn more about the background of the project, visit <a href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php">this page</a> on the computer science department website. </p>
+        <h2>About the Geothermal Wells</h2>
         <p>Carleton's Geothermal Well system is part of <a href="https://www.carleton.edu/geothermal/">Carleton's utility master plan</a>, which includes a goal of being carbon-free in 2050. The data on this website pertains to the geothermal well system that was spearheaded by the Carleton Aquifer Research Lab (CARL). The Geothermal system at Carleton consists of three interconnected borefields. These are
             located on the Bald Spot, the Mini-Bald Spot, and Bell Field. The Bald Spot is the largest system
             and it has 134 vertical boreholes that each run about 525 feet deep. The Mini-Bald Spot has 77
