first tempvsdepth download

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -85,7 +85,7 @@
             });
         </script>
         <div>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Download">
         </div>
     </form>
 {% endblock %}
