figured out outage in tempvsdepth

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -91,6 +91,7 @@
 
         <script type="text/javascript">
             $(function() {
+                {% comment %} the id in this function must be different than the id from the function above {% endcomment %}
                 $('#id_timestamp').daterangepicker({
                     singleDatePicker: true,
                     minDate: "{{ dataStartDate }}",
