--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -92,7 +92,7 @@
         <script type="text/javascript">
             $(function() {
                 {% comment %} the id in this function must be different than the id from the function above {% endcomment %}
-                $('#id_timestamp').daterangepicker({
+                $('#id_timestamp2').daterangepicker({
                     singleDatePicker: true,
                     minDate: "{{ dataStartDate }}",
                     maxDate: "{{ dataEndDate }}",
