attempt on adding the loading wheel as feedback to the user when running query

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -9,11 +9,13 @@
 
 {% block javascript %}
     {{ block.super }}
+    {% load static %}
 
     <!--daterangepicker package files-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script type="text/javascript" src="{% static 'loadingWheel.js' %}"></script>
 
 {% endblock %}
 
