--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
 {% endblock %}
 
@@ -39,12 +40,14 @@
     {% if queryData %}
     {% load static %}
 
-    <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'tempVsDepthGraph.js' %}" type="module"></script>
     <script>
-        var labels = {{ graphData["labels"]}};
-        var data = {{ graphData["temperatures"]}};
+        var labels = {{ yData | safe}};
+        var data = {{ xData | safe}};
     </script>
+    <div class="container">
+        <canvas id="tempvsdepthgraph"></canvas>
+    </div>
 
     <div id="graph" style="width:100%;height:500px"></div>
     {% endif %}
