--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -14,7 +14,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
 {% endblock %}
 
@@ -42,8 +43,7 @@
 
     <script src="{% static 'tempVsDepthGraph.js' %}" type="module"></script>
     <script>
-        var labels = {{ yData | safe}};
-        var data = {{ xData | safe}};
+        var graphData = {{ graphData | safe}};
     </script>
     <div class="container">
         <canvas id="tempvsdepthgraph"></canvas>
