Added download for tempvsdepth

--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -84,11 +84,10 @@
         </script>
         <div>
             <input type="submit" value="Submit">
-            <button type="button">Download</button>
         </div>
     </form>
 
-    <form action="/tempvsdepth/download" method="post">
+    <!-- <form action="/tempvsdepth/download" method="post">
         {% csrf_token %}
         {{ form }}
         {# This script enables the fancy datetime picker #}
@@ -106,5 +105,5 @@
         <div>
             <input type="submit" value="Download">
         </div>
-    </form>
+    </form> -->
 {% endblock %}
