--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -37,6 +37,41 @@
     </details>
     {% endif %}
 
+    {% if queryData %}
+    <script>
+        function downloadData() {
+            var queryData = {{queryData | safe}};
+            var csv = '';
+            var keys = Object.keys(queryData[0])
+            keys.forEach(element => {
+            csv += element;
+            csv += ',\n';
+            });
+
+            queryData.forEach(row => {
+            keys.forEach(element => {
+            csv += row[element];
+            csv += ',';
+            })
+            csv = csv.slice(0, -1) //remove the last comma
+            csv += '\n';
+            })
+            document.write(csv);  
+
+            var newElement = document.createElement('a');  
+            newElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);  
+            newElement.target = '_blank';  
+            
+            //provide the name for the CSV file to be downloaded  
+            newElement.download = 'tempVsDepthDownload.csv';  
+            newElement.click(); 
+        }
+    </script>
+    
+
+    <button onclick="downloadData()">Download data</button>
+    {% endif %}
+
 
     {% if queryData %}
     {% load static %}
@@ -51,7 +86,6 @@
 
     <div id="graph" style="width:100%;height:500px"></div>
     {% endif %}
-
 
 
     <form action="/tempvsdepth/" method="post">
